@@ -7,7 +7,6 @@ import domain.models.entities.entidadesGenerales.organizacion.PublicacionDarAdop
 import domain.models.entities.entidadesGenerales.organizacion.PublicacionInteresAdopcion;
 import domain.models.entities.entidadesGenerales.organizacion.PublicacionMascotaPerdida;
 import domain.models.entities.entidadesGenerales.usuarios.Usuario;
-import domain.models.entities.enums.PosibleEstadoPublicacion;
 import domain.models.repositories.RepositorioOrganizaciones;
 import spark.ModelAndView;
 import spark.Request;
@@ -59,6 +58,10 @@ public class OrganizacionController {
 
     public void modificar(Organizacion org) {
         repositorio.modificar(org);
+    }
+
+    public Organizacion modificarDevolviendoOrg(Organizacion org) {
+        return repositorio.modificar(org);
     }
 
     public void eliminar(Integer id) {
@@ -153,7 +156,7 @@ public class OrganizacionController {
 
     public ModelAndView pantallaAgregarCuestionarioOrganizacion(Request request, Response response) {
         Map<String, Object> parametros = new HashMap<>();
-        if (UsuarioController.esVoluntarioLogeado(request)) {
+        if (UsuarioController.esVoluntarioLogeado(request) || UsuarioController.esAdmin(Integer.valueOf(request.params("id")))) {
             Organizacion organizacion = buscarOrganizacionPorID(Integer.valueOf(request.params("id")));
             parametros.put("organizacion", organizacion);
             Utilidades.asignarUsuarioSiEstaLogueado(request, parametros);
@@ -168,7 +171,7 @@ public class OrganizacionController {
             Organizacion organizacion = this.repositorio.buscar(new Integer(request.params("id")));
             organizacion.postularseVoluntario(UsuarioController.getInstancia().buscarUsuarioPorID(request.session().attribute("id")));
             this.repositorio.modificar(organizacion);
-            response.redirect("/");
+            response.redirect("/organizaciones");
         } catch (Exception e) {
             response.redirect("/mensaje/Error al postularse: " + e);
         } finally {
@@ -177,15 +180,36 @@ public class OrganizacionController {
     }
 
     public Response aprobarVoluntario(Request request, Response response) {
-        try { //
-            Organizacion organizacion = this.repositorio.buscar(new Integer(request.params("idOrganizacion")));
-            Usuario usuario = UsuarioController.getInstancia().buscarUsuarioPorID(new Integer(request.params("idUsuario")));
-            organizacion.agregarVoluntario(usuario);
-
-            this.repositorio.modificar(organizacion);
-            response.redirect("/");
+        try {
+            Usuario usuarioSesion = UsuarioController.buscarUsuarioPorID(request.session().attribute("id"));
+            Organizacion organizacion = repositorio.buscar(Integer.valueOf(request.params("idOrganizacion")));
+            Usuario usuario = UsuarioController.getInstancia().buscarUsuarioPorID(Integer.valueOf(request.params("idUsuario")));
+            if (esVoluntarioDeOrg(organizacion.getId(), usuarioSesion.getId()) || UsuarioController.esAdmin(usuarioSesion.getId())) {
+                organizacion.agregarVoluntario(usuario);
+                repositorio.modificar(organizacion);
+                response.redirect("/voluntarios/" + organizacion.getId());
+            }
+            response.redirect("/mensaje/Acceso denegado");
         } catch (Exception e) {
             response.redirect("/mensaje/Error al aprobar voluntario: " + e);
+        } finally {
+            return response;
+        }
+    }
+
+    public Response denegarVoluntario(Request request, Response response) {
+        try {
+            Usuario usuarioSesion = UsuarioController.buscarUsuarioPorID(request.session().attribute("id"));
+            Organizacion organizacion = repositorio.buscar(Integer.valueOf(request.params("idOrganizacion")));
+            Usuario usuario = UsuarioController.getInstancia().buscarUsuarioPorID(Integer.valueOf(request.params("idUsuario")));
+            if (esVoluntarioDeOrg(organizacion.getId(), usuarioSesion.getId()) || UsuarioController.esAdmin(usuarioSesion.getId())) {
+                organizacion.eliminarVoluntario(usuario);
+                repositorio.modificar(organizacion);
+                response.redirect("/voluntarios/" + organizacion.getId());
+            }
+            response.redirect("/mensaje/Acceso denegado");
+        } catch (Exception e) {
+            response.redirect("/mensaje/Error al denegar voluntario: " + e);
         } finally {
             return response;
         }
